--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "test": "test"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "ava": "^0.16.0",
+    "sinon": "^1.17.5",
+    "tslint": "^3.15.1",
+    "typescript": "^1.8.10"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified yet\" && exit 1"
+    "build": "tsc",
+    "build:watch": "tsc -w",
+    "clean": "rm -rf doc lib test",
+    "lint": "tslint src/lib/* src/test/*",
+    "test": "ava --verbose"
   },
   "repository": {
     "type": "git",
