--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^1.8.10"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "build": "tsc",
     "build:watch": "tsc -w",
     "clean": "rm -rf doc lib test",
